Changed URL structure, renamed Counter.Razor to it's actual purpose is highlighted, made anonnymous users get redirected to login, and logged in users redirected to dashboard. Also added support for roles, and added a proof of concept

--- a/asp_net_core/Areas/Identity/Pages/Account/Auth.cshtml
+++ b/asp_net_core/Areas/Identity/Pages/Account/Auth.cshtml
@@ -11,8 +11,8 @@
 
 <div id="centerDiv">
     <div id="signInUp">
-        <button id="loginBtn" onclick="displaySignIn()">Sign in</button>
-        <button id="signupBtn" class="clear" onclick="displayRegister()">Sign up</button>
+        <button id="loginBtn" class="login-button" onclick="displaySignIn()">Sign in</button>
+        <button id="signupBtn" class="login-button clear" onclick="displayRegister()">Sign up</button>
     </div>
     <form id="loginForm" method="post" asp-page-handler="Login" class="form">
         <label asp-for="LoginForm.UserName"></label>
