--- a/asp_net_core/Views/Home/Dashboard_component.razor
+++ b/asp_net_core/Views/Home/Dashboard_component.razor
@@ -12,7 +12,7 @@
 <div class="leftDiv">
     <div class="topbar">
         <h2>Desks</h2>
-        <p>Refresh count: @currentCount</p>
+        @*<p>Refresh count: @currentCount</p>*@
         <button class="btn btn-primary blue" @onclick="StartDataRefresh">
             <img class="spinner" src="\refresh.svg" alt="Refresh"/>
         </button>
@@ -48,8 +48,7 @@
                     <td class="id">@id</td>
                     <td class="name">@name</td>
                     <td class="status">@status</td>
-                    
-                    <td class="errors">@if (isUserInRole) { <text>@errorCount</text> } else { <p> You are not an admin</p> }</td>
+                    <td class="errors">@if (isUserInRole) { <text>@errorCount</text> } else { <p>You are not an admin</p> }</td>
                 </tr>
             }
         </tbody>
@@ -65,51 +64,80 @@
     {
         var SelectedDesk = deskData[selectedDeskId];
         Console.WriteLine(SelectedDesk.ToJsonString());
-
-        @* <h2>Name: @(SelectedDesk["config"]?["name"]?? "N/A")</h2>
-        <h3>Manufacturer: @(SelectedDesk["config"]?["manufacturer"]?? "N/A")</h3>
-        <hr> *@
-        @*<input type="number">*@
-        <div>Position: @(SelectedDesk["state"]?["position_mm"])<br>
-            position lost: @(SelectedDesk["state"]?["isPositionLost"]?? "N/A")<br>
-            Overload Protection up:@(SelectedDesk["state"]?["isOverloadProtectionUp"] ?? "N/A")<br>
-            Overload Protection down:@(SelectedDesk["state"]?["isOverloadProtectionDown"] ?? "N/A")<br>
-            Speed: @(SelectedDesk["state"]?["speed_mms"]?? "N/A")<br>
-            Status: @(SelectedDesk["state"]?["status"] ?? "N/A")<br>
-            Anti Collision On:@(SelectedDesk["state"]?["isAntiCollision"] ?? "N/A")<br>
-        </div> 
-        <hr>
-        <div>Activations: @(SelectedDesk["usage"]?["activationsCounter"]??"N/A") <br>
-            Slavic Squat Counter:@(SelectedDesk["usage"]?["sitStandCounter"] ?? "N/A") <br>
+        @**@
+        <h2>@selectedDeskId</h2>
+        <h2>@(SelectedDesk["config"]?["name"] ?? "N/A")</h2>
+        <div>
+            <h3>Advanced details</h3>
+            <details>
+                <summary>Config</summary>
+                <ul>
+                    <li>Name: @(SelectedDesk["config"]?["name"] ?? "N/A")</li>
+                    <li>Manufacturer: @(SelectedDesk["config"]?["manufacturer"] ?? "N/A")</li>
+                </ul>
+            </details>
+            <details>
+                <summary>State</summary>
+                <ul>
+                    <li>Position: @(SelectedDesk["state"]?["position_mm"] ?? "N/A")</li>
+                    <li>Speed: @(SelectedDesk["state"]?["speed_mms"] ?? "N/A")</li>
+                    <li>Status: @(SelectedDesk["state"]?["status"] ?? "N/A")</li>
+                    <li>Position lost: @(SelectedDesk["state"]?["isPositionLost"] ?? "N/A")</li>
+                    <li>Overload Protection up: @(SelectedDesk["state"]?["isOverloadProtectionUp"] ?? "N/A")</li>
+                    <li>Overload Protection down: @(SelectedDesk["state"]?["isOverloadProtectionDown"] ?? "N/A")</li>
+                    <li>Anti Collision On: @(SelectedDesk["state"]?["isAntiCollision"] ?? "N/A")</li>
+                </ul>
+            </details>
+            <details>
+                <summary>Usage</summary>
+                <ul>
+                    <li>Activations Counter: @(SelectedDesk["usage"]?["activationsCounter"] ?? "N/A")</li>
+                    <li>Sit/Stand Counter: @(SelectedDesk["usage"]?["sitStandCounter"] ?? "N/A")</li> @*R.I.P. slavic squat counter*@
+                </ul>
+            </details>
+            <details>
+                <summary>Last errors</summary>
+                <table>
+                    <tr>
+                        <th>time(s)</th>
+                        <th>error code</th>
+                    </tr>
+                    @foreach (var i in SelectedDesk["lastErrors"]?.AsArray() ?? [])
+                    {
+                        <tr>
+                            <td>@i["time_s"]</td>
+                            <td>@i["errorCode"]</td>
+                        </tr>
+                    }
+                </table>
+            </details>
         </div>
-        <div>Error number: @(SelectedDesk["lastErrors"]?.AsArray()?.Count??-1)</div>
-        <div>history</div>
-        <div>graph</div>
-        <div>warnings/reminders</div>
-        <div>scheduling</div> @*<input type="time">*@
-        <div> @*<ul>*@
-            <h3>Set Preferred Heights</h3>
+        <div>
+            <h3>Current Height</h3>
+            <meter min="680" max="1320" value="@(SelectedDesk["state"]?["position_mm"])"></meter>
+            @*<input type="range" min="680" max="1320" value="@(SelectedDesk["state"]?["position_mm"])" disabled>*@
+            <p>@(SelectedDesk["state"]?["speed_mms"]?.ToString() == "0" ? "Still" : "Moving...")</p>
+            <h3>Save Preferred Heights</h3>
             <form @onsubmit="ChangeHeights" >
-                <AntiforgeryToken />
-            <label>
-                Sitting Height:
-                <InputNumber placeholder="Sitting Height (mm)" @bind-Value="heightRangeForm!.LowerHeight"/>
-                mm
-            </label>
-            <label>
-                Standing Height:
-                <InputNumber placeholder="Standing Height (mm)" @bind-Value="heightRangeForm!.UpperHeight"/>
-                mm
-            </label>
-            <button>Save Heights</button>
+                <label>
+                    Sitting Height:
+                    <InputNumber min="680" @bind-max="heightRangeForm!.UpperHeight" placeholder="Sitting Height" @bind-value="heightRangeForm!.LowerHeight"/> mm
+                </label>
+                <label>
+                    Standing Height:
+                    <InputNumber @bind-min="heightRangeForm!.LowerHeight" max="1320" placeholder="Standing Height" @bind-value="heightRangeForm!.UpperHeight"/> mm
+                </label>
+                <button>Save Heights</button>
             </form>
+            <h3>Set Height</h3>
             <form @onsubmit="ChangeHeight">
                 <label>
-                    Set current desk height from @SelectedDesk["state"]?["position_mm"] to:
-                    <InputNumber  placeholder="Input desired Desk Height" @bind-Value="SetDeskHeight" />
+                    Set desk height to @SelectedDesk["state"]?["position_mm"]
+                    <InputNumber  placeholder="Input desired Desk Height" @bind-Value="SetDeskHeight"/> mm
                 </label>
-                <input type="range" min="680" max="1320" value="@(SelectedDesk["state"]?["position_mm"])" disabled>
-            <button type="submit">Set Table Height</button>
+                <button type="submit">Set Height</button>
+                <button>Set Table to Sitting</button>
+                <button>Set Table to Standing</button>
             </form>
         </div>
     }
