--- a/asp_net_core/wwwroot/css/layout.css
+++ b/asp_net_core/wwwroot/css/layout.css
@@ -52,7 +52,7 @@ footer > * {
 }
 
 main {
-    overflow-y: hidden;
+    overflow: hidden;
     flex: 1 1 auto;
 }
 /* ------------------------------------------ */
